@@ -5,8 +5,8 @@ import static org.assertj.core.api.Assertions.fail;
 import static org.folio.TestConstants.EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10;
 import static org.folio.TestConstants.ID_FOR_INTERNAL_SERVER_ERROR;
 import static org.folio.TestUtils.getMockData;
-import static org.folio.orders.utils.HelperUtils.VALUE_NAME;
 import static org.folio.orders.utils.HelperUtils.KEY_NAME;
+import static org.folio.orders.utils.HelperUtils.VALUE_NAME;
 import static org.folio.orders.utils.HelperUtils.calculateInventoryItemsQuantity;
 import static org.folio.orders.utils.HelperUtils.calculateTotalQuantity;
 import static org.folio.orders.utils.PoLineCommonUtil.getElectronicCostQuantity;
@@ -56,10 +56,10 @@ import static org.folio.service.inventory.InventoryItemManager.ITEM_STATUS_NAME;
 import static org.folio.service.inventory.InventoryUtils.CONFIG_NAME_INSTANCE_STATUS_CODE;
 import static org.folio.service.inventory.InventoryUtils.CONFIG_NAME_INSTANCE_TYPE_CODE;
 import static org.folio.service.inventory.InventoryUtils.CONFIG_NAME_LOAN_TYPE_NAME;
-import static org.folio.service.inventory.InventoryUtils.LOAN_TYPES;
-import static org.folio.service.inventory.InventoryUtils.DEFAULT_LOAN_TYPE_NAME;
 import static org.folio.service.inventory.InventoryUtils.DEFAULT_INSTANCE_STATUS_CODE;
 import static org.folio.service.inventory.InventoryUtils.DEFAULT_INSTANCE_TYPE_CODE;
+import static org.folio.service.inventory.InventoryUtils.DEFAULT_LOAN_TYPE_NAME;
+import static org.folio.service.inventory.InventoryUtils.LOAN_TYPES;
 import static org.folio.service.pieces.PieceUtil.calculatePiecesQuantityWithoutLocation;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.emptyOrNullString;
@@ -75,6 +75,9 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import io.restassured.http.Header;
+import io.vertx.core.json.JsonArray;
+import io.vertx.core.json.JsonObject;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -82,7 +85,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -97,10 +99,6 @@ import org.folio.rest.jaxrs.model.PoLine;
 import org.folio.rest.jaxrs.model.ReceivedItem;
 import org.folio.rest.jaxrs.model.acq.Location;
 
-import io.restassured.http.Header;
-import io.vertx.core.json.JsonArray;
-import io.vertx.core.json.JsonObject;
-
 public class InventoryInteractionTestHelper {
   private static final Logger logger = LogManager.getLogger();
 
@@ -113,7 +111,8 @@ public class InventoryInteractionTestHelper {
         boolean instanceLinked = false;
         for (JsonObject jsonObj : polUpdates) {
           PoLine line = jsonObj.mapTo(PoLine.class);
-          if (StringUtils.equals(line.getId(), compLine.getId()) && StringUtils.isNotEmpty(line.getInstanceId())) {
+          if (StringUtils.equals(line.getId(), compLine.getId())
+              && StringUtils.isNotEmpty(line.getInstanceId())) {
             instanceLinked = true;
             // Populate instance id in the req data for further validation
             compLine.setInstanceId(line.getInstanceId());
@@ -126,11 +125,17 @@ public class InventoryInteractionTestHelper {
     }
   }
 
-  public static void verifyInventoryInteraction(CompositePurchaseOrder reqData, int createdInstancesCount, int expectedWithItemQty) {
-    verifyInventoryInteraction(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, reqData, createdInstancesCount, expectedWithItemQty);
+  public static void verifyInventoryInteraction(
+      CompositePurchaseOrder reqData, int createdInstancesCount, int expectedWithItemQty) {
+    verifyInventoryInteraction(
+        EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, reqData, createdInstancesCount, expectedWithItemQty);
   }
 
-  public static void verifyInventoryInteraction(Header tenant, CompositePurchaseOrder reqData, int createdInstancesCount, int expectedWithItemQty) {
+  public static void verifyInventoryInteraction(
+      Header tenant,
+      CompositePurchaseOrder reqData,
+      int createdInstancesCount,
+      int expectedWithItemQty) {
     // Verify inventory GET and POST requests for instance, holding and item records
     verifyInventoryInteraction(true, true);
 
@@ -153,22 +158,31 @@ public class InventoryInteractionTestHelper {
     }
   }
 
-  public static void verifyInventoryInteraction(boolean checkItemsCreated, boolean checkHoldingSearches) {
+  public static void verifyInventoryInteraction(
+      boolean checkItemsCreated, boolean checkHoldingSearches) {
     // Check that search of the existing instances and items was done for each PO line
     List<JsonObject> instancesSearches = getInstancesSearches();
     List<JsonObject> holdingsSearches = getHoldingsSearches();
     List<JsonObject> itemsSearches = getItemsSearches();
     List<JsonObject> piecesSearches = getPieceSearches();
     assertNotNull(instancesSearches);
-    logger.debug("--------------------------- Instances found -------------------------------\n" + new JsonArray(instancesSearches).encodePrettily());
+    logger.debug(
+        "--------------------------- Instances found -------------------------------\n"
+            + new JsonArray(instancesSearches).encodePrettily());
     if (checkHoldingSearches) {
       assertNotNull(holdingsSearches);
-      logger.debug("--------------------------- Holdings found -------------------------------\n" + new JsonArray(holdingsSearches).encodePrettily());
+      logger.debug(
+          "--------------------------- Holdings found -------------------------------\n"
+              + new JsonArray(holdingsSearches).encodePrettily());
     }
     assertNotNull(itemsSearches);
-    logger.debug("--------------------------- Items found -------------------------------\n" + new JsonArray(itemsSearches).encodePrettily());
+    logger.debug(
+        "--------------------------- Items found -------------------------------\n"
+            + new JsonArray(itemsSearches).encodePrettily());
     assertNotNull(piecesSearches);
-    logger.debug("--------------------------- Pieces found -------------------------------\n" + new JsonArray(piecesSearches).encodePrettily());
+    logger.debug(
+        "--------------------------- Pieces found -------------------------------\n"
+            + new JsonArray(piecesSearches).encodePrettily());
 
     // Check that creation of the new instances and items was done
     List<JsonObject> createdInstances = getCreatedInstances();
@@ -176,23 +190,32 @@ public class InventoryInteractionTestHelper {
     List<JsonObject> createdItems = getCreatedItems();
     List<JsonObject> createdPieces = getCreatedPieces();
     assertNotNull(createdInstances);
-    logger.debug("--------------------------- Instances created -------------------------------\n" + new JsonArray(createdInstances).encodePrettily());
+    logger.debug(
+        "--------------------------- Instances created -------------------------------\n"
+            + new JsonArray(createdInstances).encodePrettily());
     assertNotNull(createdHoldings);
-    logger.debug("--------------------------- Holdings created -------------------------------\n" + new JsonArray(createdHoldings).encodePrettily());
+    logger.debug(
+        "--------------------------- Holdings created -------------------------------\n"
+            + new JsonArray(createdHoldings).encodePrettily());
     if (checkItemsCreated) {
       assertNotNull(createdItems);
-      logger.debug("--------------------------- Items created -------------------------------\n" + new JsonArray(createdItems).encodePrettily());
+      logger.debug(
+          "--------------------------- Items created -------------------------------\n"
+              + new JsonArray(createdItems).encodePrettily());
     }
     assertNotNull(createdPieces);
-    logger.debug("--------------------------- Pieces created -------------------------------\n" + new JsonArray(createdPieces).encodePrettily());
+    logger.debug(
+        "--------------------------- Pieces created -------------------------------\n"
+            + new JsonArray(createdPieces).encodePrettily());
   }
 
-  public static void verifyPiecesQuantityForSuccessCase(List<PoLine> poLines, List<JsonObject> createdPieces) {
-    List<Piece> pieces = createdPieces
-      .stream()
-      .map(pieceObj -> pieceObj.mapTo(PieceCollection.class))
-      .flatMap(pieceCollection -> pieceCollection.getPieces().stream())
-      .toList();
+  public static void verifyPiecesQuantityForSuccessCase(
+      List<PoLine> poLines, List<JsonObject> createdPieces) {
+    List<Piece> pieces =
+        createdPieces.stream()
+            .map(pieceObj -> pieceObj.mapTo(PieceCollection.class))
+            .flatMap(pieceCollection -> pieceCollection.getPieces().stream())
+            .toList();
     int totalQuantity = 0;
     for (PoLine poLine : poLines) {
       if (poLine.getCheckinItems() != null && poLine.getCheckinItems()) continue;
@@ -203,16 +226,19 @@ public class InventoryInteractionTestHelper {
 
   public static List<JsonObject> joinExistingAndNewItems() {
     List<JsonObject> items = new ArrayList<>(CollectionUtils.emptyIfNull(getCreatedItems()));
-    getItemsSearches().forEach(json -> {
-      JsonArray existingItems = json.getJsonArray("items");
-      if (existingItems != null) {
-        existingItems.forEach(item -> items.add((JsonObject) item));
-      }
-    });
+    getItemsSearches()
+        .forEach(
+            json -> {
+              JsonArray existingItems = json.getJsonArray("items");
+              if (existingItems != null) {
+                existingItems.forEach(item -> items.add((JsonObject) item));
+              }
+            });
     return items;
   }
 
-  private static void verifyInstanceCreated(Header tenant, List<JsonObject> inventoryInstances, PoLine pol) {
+  private static void verifyInstanceCreated(
+      Header tenant, List<JsonObject> inventoryInstances, PoLine pol) {
     boolean verified = false;
     for (JsonObject instance : inventoryInstances) {
       if (pol.getTitleOrPackage().equals(instance.getString("title"))) {
@@ -228,27 +254,30 @@ public class InventoryInteractionTestHelper {
       fail("No matching instance for POL: " + JsonObject.mapFrom(pol).encodePrettily());
     }
 
-    if ((!verified && StringUtils.isNotEmpty(pol.getInstanceId()) || (verified && expectedItemsQuantity == 0))) {
+    if ((!verified && StringUtils.isNotEmpty(pol.getInstanceId())
+        || (verified && expectedItemsQuantity == 0))) {
       fail("No instance expected for POL: " + JsonObject.mapFrom(pol).encodePrettily());
     }
   }
 
-  public static void verifyPiecesCreated(List<JsonObject> inventoryItems, List<PoLine> poLines, List<JsonObject> pieceJsons) {
+  public static void verifyPiecesCreated(
+      List<JsonObject> inventoryItems, List<PoLine> poLines, List<JsonObject> pieceJsons) {
     // Collect all item id's
-    List<String> itemIds = inventoryItems.stream()
-      .map(item -> item.getString(ID))
-      .collect(Collectors.toList());
-    List<Piece> pieces = pieceJsons
-      .stream()
-      .map(pieceObj -> pieceObj.mapTo(Piece.class))
-      .toList();
+    List<String> itemIds =
+        inventoryItems.stream().map(item -> item.getString(ID)).collect(Collectors.toList());
+    List<Piece> pieces = pieceJsons.stream().map(pieceObj -> pieceObj.mapTo(Piece.class)).toList();
 
     // Verify quantity of created pieces
     int totalForAllPoLines = 0;
     for (PoLine poLine : poLines) {
-      List<Location> locations = poLine.getLocations().stream()
-        .filter(location -> PoLineCommonUtil.isHoldingCreationRequiredForLocation(poLine, location) && !Objects.equals(location.getLocationId(), ID_FOR_INTERNAL_SERVER_ERROR))
-        .collect(Collectors.toList());
+      List<Location> locations =
+          poLine.getLocations().stream()
+              .filter(
+                  location ->
+                      PoLineCommonUtil.isHoldingCreationRequiredForLocation(poLine, location)
+                          && !Objects.equals(
+                              location.getLocationId(), ID_FOR_INTERNAL_SERVER_ERROR))
+              .collect(Collectors.toList());
 
       // Prepare data first
 
@@ -258,29 +287,35 @@ public class InventoryInteractionTestHelper {
       int expectedOthQty = 0;
       if (poLine.getCheckinItems() == null || !poLine.getCheckinItems()) {
         if (poLine.getOrderFormat() == PoLine.OrderFormat.OTHER) {
-          expectedOthQty += getPhysicalCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.OTHER, locations);
+          expectedOthQty +=
+              getPhysicalCostQuantity(
+                  poLine); // calculatePiecesQuantity(Piece.Format.OTHER, locations);
         } else {
-          expectedPhysQty += getPhysicalCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.PHYSICAL, locations);
+          expectedPhysQty +=
+              getPhysicalCostQuantity(
+                  poLine); // calculatePiecesQuantity(Piece.Format.PHYSICAL, locations);
         }
-        expectedElQty = getElectronicCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.ELECTRONIC, locations);
+        expectedElQty =
+            getElectronicCostQuantity(
+                poLine); // calculatePiecesQuantity(Piece.Format.ELECTRONIC, locations);
       }
 
       int expectedWithItemQty = 0;
       int expectedWithoutItemQty = calculateInventoryItemsQuantity(poLine, locations);
-      int expectedWithoutLocation = calculatePiecesQuantityWithoutLocation(poLine).values().stream().mapToInt(Integer::intValue).sum();
+      int expectedWithoutLocation =
+          calculatePiecesQuantityWithoutLocation(poLine).values().stream()
+              .mapToInt(Integer::intValue)
+              .sum();
 
       // Prepare pieces for PO Line
-      List<Piece> piecesByPoLine = pieces
-        .stream()
-        .filter(piece -> piece.getPoLineId().equals(poLine.getId()))
-        .collect(Collectors.toList());
+      List<Piece> piecesByPoLine =
+          pieces.stream()
+              .filter(piece -> piece.getPoLineId().equals(poLine.getId()))
+              .collect(Collectors.toList());
 
       // Get all PO Line's locations' ids
-      List<String> locationIds = locations
-        .stream()
-        .map(Location::getLocationId)
-        .distinct()
-        .collect(Collectors.toList());
+      List<String> locationIds =
+          locations.stream().map(Location::getLocationId).distinct().collect(Collectors.toList());
 
       int expectedTotal = expectedWithItemQty + expectedWithoutItemQty + expectedWithoutLocation;
       // Make sure that quantities by piece type and by item presence are the same
@@ -289,17 +324,18 @@ public class InventoryInteractionTestHelper {
       assertThat(piecesByPoLine, hasSize(expectedTotal));
 
       // Verify each piece individually
-      piecesByPoLine.forEach(piece -> {
-        // Check if itemId in inventoryItems match itemId in piece record
-        if (piece.getLocationId() != null) {
-          assertThat(locationIds, hasItem(piece.getLocationId()));
-        }
-        assertThat(piece.getReceivingStatus(), equalTo(Piece.ReceivingStatus.EXPECTED));
-        if (piece.getItemId() != null) {
-          assertThat(itemIds, hasItem(piece.getItemId()));
-        }
-        assertThat(piece.getFormat(), notNullValue());
-      });
+      piecesByPoLine.forEach(
+          piece -> {
+            // Check if itemId in inventoryItems match itemId in piece record
+            if (piece.getLocationId() != null) {
+              assertThat(locationIds, hasItem(piece.getLocationId()));
+            }
+            assertThat(piece.getReceivingStatus(), equalTo(Piece.ReceivingStatus.EXPECTED));
+            if (piece.getItemId() != null) {
+              assertThat(itemIds, hasItem(piece.getItemId()));
+            }
+            assertThat(piece.getFormat(), notNullValue());
+          });
 
       totalForAllPoLines += expectedTotal;
     }
@@ -308,26 +344,34 @@ public class InventoryInteractionTestHelper {
     assertThat(pieceJsons, hasSize(totalForAllPoLines));
   }
 
-  public static void verifyOpenOrderPiecesCreated(List<JsonObject> inventoryItems, List<PoLine> poLines, List<JsonObject> pieceJsons, int expectedWithItemQty) {
+  public static void verifyOpenOrderPiecesCreated(
+      List<JsonObject> inventoryItems,
+      List<PoLine> poLines,
+      List<JsonObject> pieceJsons,
+      int expectedWithItemQty) {
     // Collect all item id's
-    List<String> itemIds = inventoryItems.stream()
-      .map(item -> item.getString(ID))
-      .collect(Collectors.toList());
-    List<Piece> pieces = pieceJsons
-      .stream()
-      .map(pieceObj -> pieceObj.mapTo(PieceCollection.class))
-      .flatMap(pieceCollection -> pieceCollection.getPieces().stream())
-      .toList();
+    List<String> itemIds =
+        inventoryItems.stream().map(item -> item.getString(ID)).collect(Collectors.toList());
+    List<Piece> pieces =
+        pieceJsons.stream()
+            .map(pieceObj -> pieceObj.mapTo(PieceCollection.class))
+            .flatMap(pieceCollection -> pieceCollection.getPieces().stream())
+            .toList();
 
     // Verify quantity of created pieces
     for (PoLine poLine : poLines) {
       Map<String, List<JsonObject>> createdHoldingsByLocationId =
-        getCreatedHoldings().stream()
-          .filter(json -> json.getString("instanceId").equals(poLine.getInstanceId()))
-          .collect(groupingBy(json -> json.getString(HOLDING_PERMANENT_LOCATION_ID)));
-      List<Location> locations = poLine.getLocations().stream()
-        .filter(location -> PoLineCommonUtil.isHoldingCreationRequiredForLocation(poLine, location) && !Objects.equals(location.getLocationId(), ID_FOR_INTERNAL_SERVER_ERROR))
-        .collect(Collectors.toList());
+          getCreatedHoldings().stream()
+              .filter(json -> json.getString("instanceId").equals(poLine.getInstanceId()))
+              .collect(groupingBy(json -> json.getString(HOLDING_PERMANENT_LOCATION_ID)));
+      List<Location> locations =
+          poLine.getLocations().stream()
+              .filter(
+                  location ->
+                      PoLineCommonUtil.isHoldingCreationRequiredForLocation(poLine, location)
+                          && !Objects.equals(
+                              location.getLocationId(), ID_FOR_INTERNAL_SERVER_ERROR))
+              .collect(Collectors.toList());
 
       // Calculated quantities
       int expectedElQty = 0;
@@ -335,43 +379,52 @@ public class InventoryInteractionTestHelper {
       int expectedOthQty = 0;
       if (poLine.getCheckinItems() == null || !poLine.getCheckinItems()) {
         if (poLine.getOrderFormat() == PoLine.OrderFormat.OTHER) {
-          expectedOthQty += getPhysicalCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.OTHER, locations);
+          expectedOthQty +=
+              getPhysicalCostQuantity(
+                  poLine); // calculatePiecesQuantity(Piece.Format.OTHER, locations);
         } else {
-          expectedPhysQty += getPhysicalCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.PHYSICAL, locations);
+          expectedPhysQty +=
+              getPhysicalCostQuantity(
+                  poLine); // calculatePiecesQuantity(Piece.Format.PHYSICAL, locations);
         }
-        expectedElQty = getElectronicCostQuantity(poLine);//calculatePiecesQuantity(Piece.Format.ELECTRONIC, locations);
+        expectedElQty =
+            getElectronicCostQuantity(
+                poLine); // calculatePiecesQuantity(Piece.Format.ELECTRONIC, locations);
       }
 
       int expectedWithoutItemQty = calculateInventoryItemsQuantity(poLine, locations);
-      int expectedWithoutLocation = calculatePiecesQuantityWithoutLocation(poLine).values().stream().mapToInt(Integer::intValue).sum();
-
+      int expectedWithoutLocation =
+          calculatePiecesQuantityWithoutLocation(poLine).values().stream()
+              .mapToInt(Integer::intValue)
+              .sum();
 
       // Prepare pieces for PO Line
-      List<Piece> poLinePieces = pieces
-        .stream()
-        .filter(piece -> piece.getPoLineId().equals(poLine.getId()))
-        .toList();
+      List<Piece> poLinePieces =
+          pieces.stream().filter(piece -> piece.getPoLineId().equals(poLine.getId())).toList();
 
       int expectedTotal = expectedWithItemQty + expectedWithoutItemQty + expectedWithoutLocation;
       // Make sure that quantities by piece type and by item presence are the same
       assertThat(expectedPhysQty + expectedElQty + expectedOthQty, is(expectedTotal));
 
       // Verify each piece individually
-      poLinePieces.forEach(piece -> {
-          // Check if itemId in inventoryItems match itemId in piece record
-          if (poLine.getCheckinItems() != null && Boolean.FALSE.equals(poLine.getCheckinItems())) {
-            if (piece.getLocationId() != null) {
-              String pieceLocationId = piece.getLocationId();
-              List<JsonObject> createdHoldingsForLocation = createdHoldingsByLocationId.get(pieceLocationId);
-              assertNotNull(createdHoldingsForLocation);
-          }
-          }
-        assertThat(piece.getReceivingStatus(), equalTo(Piece.ReceivingStatus.EXPECTED));
-        if (piece.getItemId() != null) {
-          assertThat(itemIds, hasItem(piece.getItemId()));
-        }
-        assertThat(piece.getFormat(), notNullValue());
-      });
+      poLinePieces.forEach(
+          piece -> {
+            // Check if itemId in inventoryItems match itemId in piece record
+            if (poLine.getCheckinItems() != null
+                && Boolean.FALSE.equals(poLine.getCheckinItems())) {
+              if (piece.getLocationId() != null) {
+                String pieceLocationId = piece.getLocationId();
+                List<JsonObject> createdHoldingsForLocation =
+                    createdHoldingsByLocationId.get(pieceLocationId);
+                assertNotNull(createdHoldingsForLocation);
+              }
+            }
+            assertThat(piece.getReceivingStatus(), equalTo(Piece.ReceivingStatus.EXPECTED));
+            if (piece.getItemId() != null) {
+              assertThat(itemIds, hasItem(piece.getItemId()));
+            }
+            assertThat(piece.getFormat(), notNullValue());
+          });
     }
   }
 
@@ -406,15 +459,15 @@ public class InventoryInteractionTestHelper {
   }
 
   public static void verifyHoldingsCreated(int expectedQty, List<JsonObject> holdings, PoLine pol) {
-    Map<String, List<Location>> groupedLocationsByHoldingId = pol.getLocations()
-      .stream()
-      .filter(location -> Objects.nonNull(location.getHoldingId()))
-      .collect(Collectors.groupingBy(Location::getHoldingId));
+    Map<String, List<Location>> groupedLocationsByHoldingId =
+        pol.getLocations().stream()
+            .filter(location -> Objects.nonNull(location.getHoldingId()))
+            .collect(Collectors.groupingBy(Location::getHoldingId));
 
     long actualQty = 0;
     for (JsonObject holding : holdings) {
       if (groupedLocationsByHoldingId.containsKey(holding.getString(ID))
-        && StringUtils.equals(pol.getInstanceId(), holding.getString(HOLDING_INSTANCE_ID))) {
+          && StringUtils.equals(pol.getInstanceId(), holding.getString(HOLDING_INSTANCE_ID))) {
         actualQty++;
       }
     }
@@ -427,7 +480,7 @@ public class InventoryInteractionTestHelper {
     long actualQty = 0;
     for (JsonObject holding : holdings) {
       if (groupedLocations.containsKey(holding.getString(HOLDING_PERMANENT_LOCATION_ID))
-        && StringUtils.equals(pol.getInstanceId(), holding.getString(HOLDING_INSTANCE_ID))) {
+          && StringUtils.equals(pol.getInstanceId(), holding.getString(HOLDING_INSTANCE_ID))) {
         actualQty++;
       }
     }
@@ -441,72 +494,91 @@ public class InventoryInteractionTestHelper {
     }
   }
 
-  public static void verifyItemsCreated(Header tenant, List<JsonObject> inventoryItems, PoLine pol) {
-    Map<Piece.Format, Integer> expectedItemsPerResourceType = HelperUtils.calculatePiecesWithItemIdQuantity(pol,
-      pol.getLocations());
+  public static void verifyItemsCreated(
+      Header tenant, List<JsonObject> inventoryItems, PoLine pol) {
+    Map<Piece.Format, Integer> expectedItemsPerResourceType =
+        HelperUtils.calculatePiecesWithItemIdQuantity(pol, pol.getLocations());
 
-    Map<String, List<JsonObject>> itemsByMaterial = inventoryItems.stream()
-      .filter(item -> pol.getId().equals(item.getString(ITEM_PURCHASE_ORDER_LINE_IDENTIFIER)))
-      .collect(Collectors.groupingBy(item -> item.getString(ITEM_MATERIAL_TYPE_ID)));
+    Map<String, List<JsonObject>> itemsByMaterial =
+        inventoryItems.stream()
+            .filter(item -> pol.getId().equals(item.getString(ITEM_PURCHASE_ORDER_LINE_IDENTIFIER)))
+            .collect(Collectors.groupingBy(item -> item.getString(ITEM_MATERIAL_TYPE_ID)));
 
-    expectedItemsPerResourceType.forEach((resourceType, quantity) -> {
-      if (quantity < 1) {
-        return;
-      }
-      if (resourceType.equals(Piece.Format.ELECTRONIC)) {
-        assertThat(quantity, is(itemsByMaterial.get(pol.getEresource().getMaterialType()).size()));
-        itemsByMaterial.get(pol.getEresource().getMaterialType())
-          .forEach(item -> verifyItemRecordRequest(tenant, item, pol.getEresource().getMaterialType()));
-      } else {
-        assertThat(quantity, is(itemsByMaterial.get(pol.getPhysical().getMaterialType()).size()));
-        itemsByMaterial.get(pol.getPhysical().getMaterialType())
-          .forEach(item -> verifyItemRecordRequest(tenant, item, pol.getPhysical().getMaterialType()));
+    expectedItemsPerResourceType.forEach(
+        (resourceType, quantity) -> {
+          if (quantity < 1) {
+            return;
+          }
+          if (resourceType.equals(Piece.Format.ELECTRONIC)) {
+            assertThat(
+                quantity, is(itemsByMaterial.get(pol.getEresource().getMaterialType()).size()));
+            itemsByMaterial
+                .get(pol.getEresource().getMaterialType())
+                .forEach(
+                    item ->
+                        verifyItemRecordRequest(
+                            tenant, item, pol.getEresource().getMaterialType()));
+          } else {
+            assertThat(
+                quantity, is(itemsByMaterial.get(pol.getPhysical().getMaterialType()).size()));
+            itemsByMaterial
+                .get(pol.getPhysical().getMaterialType())
+                .forEach(
+                    item ->
+                        verifyItemRecordRequest(tenant, item, pol.getPhysical().getMaterialType()));
+          }
+        });
 
-      }
-    });
-
-    long actualQuantity = itemsByMaterial.values()
-      .stream()
-      .mapToInt(List::size)
-      .sum();
+    long actualQuantity = itemsByMaterial.values().stream().mapToInt(List::size).sum();
 
     int expectedQuantity = calculateInventoryItemsQuantity(pol);
     if (expectedQuantity != actualQuantity) {
-      fail(String.format("Actual items quantity is %d but expected %d", actualQuantity, expectedQuantity));
+      fail(
+          String.format(
+              "Actual items quantity is %d but expected %d", actualQuantity, expectedQuantity));
     }
   }
 
-  public static void verifyItemsCreated(Header tenant, int expItemQtq, List<JsonObject> inventoryItems, PoLine pol) {
-    Map<Piece.Format, Integer> expectedItemsPerResourceType = HelperUtils.calculatePiecesWithItemIdQuantity(pol,
-      pol.getLocations());
+  public static void verifyItemsCreated(
+      Header tenant, int expItemQtq, List<JsonObject> inventoryItems, PoLine pol) {
+    Map<Piece.Format, Integer> expectedItemsPerResourceType =
+        HelperUtils.calculatePiecesWithItemIdQuantity(pol, pol.getLocations());
 
-    Map<String, List<JsonObject>> itemsByMaterial = inventoryItems.stream()
-      .filter(item -> pol.getId().equals(item.getString(ITEM_PURCHASE_ORDER_LINE_IDENTIFIER)))
-      .collect(Collectors.groupingBy(item -> item.getString(ITEM_MATERIAL_TYPE_ID)));
+    Map<String, List<JsonObject>> itemsByMaterial =
+        inventoryItems.stream()
+            .filter(item -> pol.getId().equals(item.getString(ITEM_PURCHASE_ORDER_LINE_IDENTIFIER)))
+            .collect(Collectors.groupingBy(item -> item.getString(ITEM_MATERIAL_TYPE_ID)));
 
-    expectedItemsPerResourceType.forEach((resourceType, quantity) -> {
-      if (quantity < 1) {
-        return;
-      }
-      if (resourceType.equals(Piece.Format.ELECTRONIC)) {
-        assertThat(quantity, is(itemsByMaterial.get(pol.getEresource().getMaterialType()).size()));
-        itemsByMaterial.get(pol.getEresource().getMaterialType())
-          .forEach(item -> verifyItemRecordRequest(tenant, item, pol.getEresource().getMaterialType()));
-      } else {
-        assertThat(quantity, is(itemsByMaterial.get(pol.getPhysical().getMaterialType()).size()));
-        itemsByMaterial.get(pol.getPhysical().getMaterialType())
-          .forEach(item -> verifyItemRecordRequest(tenant, item, pol.getPhysical().getMaterialType()));
+    expectedItemsPerResourceType.forEach(
+        (resourceType, quantity) -> {
+          if (quantity < 1) {
+            return;
+          }
+          if (resourceType.equals(Piece.Format.ELECTRONIC)) {
+            assertThat(
+                quantity, is(itemsByMaterial.get(pol.getEresource().getMaterialType()).size()));
+            itemsByMaterial
+                .get(pol.getEresource().getMaterialType())
+                .forEach(
+                    item ->
+                        verifyItemRecordRequest(
+                            tenant, item, pol.getEresource().getMaterialType()));
+          } else {
+            assertThat(
+                quantity, is(itemsByMaterial.get(pol.getPhysical().getMaterialType()).size()));
+            itemsByMaterial
+                .get(pol.getPhysical().getMaterialType())
+                .forEach(
+                    item ->
+                        verifyItemRecordRequest(tenant, item, pol.getPhysical().getMaterialType()));
+          }
+        });
 
-      }
-    });
-
-    long actualQuantity = itemsByMaterial.values()
-      .stream()
-      .mapToInt(List::size)
-      .sum();
+    long actualQuantity = itemsByMaterial.values().stream().mapToInt(List::size).sum();
 
     if (expItemQtq != actualQuantity) {
-      fail(String.format("Actual items quantity is %d but expected %d", actualQuantity, expItemQtq));
+      fail(
+          String.format("Actual items quantity is %d but expected %d", actualQuantity, expItemQtq));
     }
   }
 
@@ -519,19 +591,40 @@ public class InventoryInteractionTestHelper {
 
     JsonObject publication = instance.getJsonArray(INSTANCE_PUBLICATION).getJsonObject(0);
     assertThat(publication.getString(INSTANCE_PUBLISHER), equalTo(line.getPublisher()));
-    assertThat(publication.getString(INSTANCE_DATE_OF_PUBLICATION), equalTo(line.getPublicationDate()));
+    assertThat(
+        publication.getString(INSTANCE_DATE_OF_PUBLICATION), equalTo(line.getPublicationDate()));
 
     if (!line.getDetails().getProductIds().isEmpty()) {
-      assertThat(instance.getJsonArray(INSTANCE_IDENTIFIERS).getJsonObject(0).getString(INSTANCE_IDENTIFIER_TYPE_ID), equalTo("8261054f-be78-422d-bd51-4ed9f33c3422"));
-      assertThat(instance.getJsonArray(INSTANCE_IDENTIFIERS).getJsonObject(0).getString(INSTANCE_IDENTIFIER_TYPE_VALUE), equalTo(line.getDetails().getProductIds().getFirst().getProductId()));
+      assertThat(
+          instance
+              .getJsonArray(INSTANCE_IDENTIFIERS)
+              .getJsonObject(0)
+              .getString(INSTANCE_IDENTIFIER_TYPE_ID),
+          equalTo("8261054f-be78-422d-bd51-4ed9f33c3422"));
+      assertThat(
+          instance
+              .getJsonArray(INSTANCE_IDENTIFIERS)
+              .getJsonObject(0)
+              .getString(INSTANCE_IDENTIFIER_TYPE_VALUE),
+          equalTo(line.getDetails().getProductIds().getFirst().getProductId()));
     }
-    Object[] actual = Optional.ofNullable(instance.getJsonArray(INSTANCE_CONTRIBUTORS)).orElse(new JsonArray()).stream()
-      .map(o -> (JsonObject) o)
-      .collect(Collectors.toMap(c -> c.getString(CONTRIBUTOR_NAME), c -> c.getString(CONTRIBUTOR_NAME_TYPE_ID)))
-      .entrySet().toArray();
-    Object[] expected = line.getContributors().stream()
-      .collect(Collectors.toMap(Contributor::getContributor, Contributor::getContributorNameTypeId))
-      .entrySet().toArray();
+    Object[] actual =
+        Optional.ofNullable(instance.getJsonArray(INSTANCE_CONTRIBUTORS))
+            .orElse(new JsonArray())
+            .stream()
+            .map(o -> (JsonObject) o)
+            .collect(
+                Collectors.toMap(
+                    c -> c.getString(CONTRIBUTOR_NAME), c -> c.getString(CONTRIBUTOR_NAME_TYPE_ID)))
+            .entrySet()
+            .toArray();
+    Object[] expected =
+        line.getContributors().stream()
+            .collect(
+                Collectors.toMap(
+                    Contributor::getContributor, Contributor::getContributorNameTypeId))
+            .entrySet()
+            .toArray();
     assertArrayEquals(expected, actual);
   }
 
@@ -540,14 +633,18 @@ public class InventoryInteractionTestHelper {
     assertThat(material, is(item.getString(ITEM_MATERIAL_TYPE_ID)));
     assertThat(item.getString(ITEM_PERMANENT_LOAN_TYPE_ID), equalTo(getLoanTypeId(tenant)));
     assertThat(item.getJsonObject(ITEM_STATUS), notNullValue());
-    assertThat(item.getJsonObject(ITEM_STATUS).getString(ITEM_STATUS_NAME), equalTo(ReceivedItem.ItemStatus.ON_ORDER.value()));
+    assertThat(
+        item.getJsonObject(ITEM_STATUS).getString(ITEM_STATUS_NAME),
+        equalTo(ReceivedItem.ItemStatus.ON_ORDER.value()));
   }
 
   private static String getInstanceStatusId(Header tenant) {
     try {
-      String code = getConfigValue(tenant, CONFIG_NAME_INSTANCE_STATUS_CODE, DEFAULT_INSTANCE_STATUS_CODE);
-      JsonArray types = new JsonObject(getMockData(INSTANCE_STATUSES_MOCK_DATA_PATH + "types.json"))
-        .getJsonArray(INSTANCE_STATUSES);
+      String code =
+          getConfigValue(tenant, CONFIG_NAME_INSTANCE_STATUS_CODE, DEFAULT_INSTANCE_STATUS_CODE);
+      JsonArray types =
+          new JsonObject(getMockData(INSTANCE_STATUSES_MOCK_DATA_PATH + "types.json"))
+              .getJsonArray(INSTANCE_STATUSES);
       return getIdByKeyValue("code", code, types);
     } catch (IOException e) {
       return null;
@@ -556,9 +653,11 @@ public class InventoryInteractionTestHelper {
 
   private static String getInstanceTypeId(Header tenant) {
     try {
-      String code = getConfigValue(tenant, CONFIG_NAME_INSTANCE_TYPE_CODE, DEFAULT_INSTANCE_TYPE_CODE);
-      JsonArray types = new JsonObject(getMockData(INSTANCE_TYPES_MOCK_DATA_PATH + "types.json"))
-        .getJsonArray(INSTANCE_TYPES);
+      String code =
+          getConfigValue(tenant, CONFIG_NAME_INSTANCE_TYPE_CODE, DEFAULT_INSTANCE_TYPE_CODE);
+      JsonArray types =
+          new JsonObject(getMockData(INSTANCE_TYPES_MOCK_DATA_PATH + "types.json"))
+              .getJsonArray(INSTANCE_TYPES);
       return getIdByKeyValue("code", code, types);
     } catch (IOException e) {
       return null;
@@ -568,8 +667,9 @@ public class InventoryInteractionTestHelper {
   private static String getLoanTypeId(Header tenant) {
     try {
       String name = getConfigValue(tenant, CONFIG_NAME_LOAN_TYPE_NAME, DEFAULT_LOAN_TYPE_NAME);
-      JsonArray types = new JsonObject(getMockData(LOAN_TYPES_MOCK_DATA_PATH + "types.json"))
-        .getJsonArray(LOAN_TYPES);
+      JsonArray types =
+          new JsonObject(getMockData(LOAN_TYPES_MOCK_DATA_PATH + "types.json"))
+              .getJsonArray(LOAN_TYPES);
       return getIdByKeyValue("name", name, types);
     } catch (IOException e) {
       return null;
@@ -578,22 +678,22 @@ public class InventoryInteractionTestHelper {
 
   private static String getIdByKeyValue(String key, String value, JsonArray types) {
     return types.stream()
-      .map(o -> (JsonObject) o)
-      .filter(config -> value.equals(config.getString(key)))
-      .map(config -> config.getString(ID))
-      .findFirst()
-      .orElse(null);
+        .map(o -> (JsonObject) o)
+        .filter(config -> value.equals(config.getString(key)))
+        .map(config -> config.getString(ID))
+        .findFirst()
+        .orElse(null);
   }
 
-  private static String getConfigValue(Header tenant, String configName, String defaultValue) throws IOException {
-    JsonObject configs = new JsonObject(getMockData(String.format(ORDER_SETTINGS_MOCK_PATH, tenant.getValue())));
-    return configs.getJsonArray(SETTINGS)
-      .stream()
-      .map(o -> (JsonObject) o)
-      .filter(config -> configName.equals(config.getString(KEY_NAME)))
-      .map(config -> config.getString(VALUE_NAME))
-      .findFirst()
-      .orElse(defaultValue);
+  private static String getConfigValue(Header tenant, String configName, String defaultValue)
+      throws IOException {
+    JsonObject configs =
+        new JsonObject(getMockData(String.format(ORDER_SETTINGS_MOCK_PATH, tenant.getValue())));
+    return configs.getJsonArray(SETTINGS).stream()
+        .map(o -> (JsonObject) o)
+        .filter(config -> configName.equals(config.getString(KEY_NAME)))
+        .map(config -> config.getString(VALUE_NAME))
+        .findFirst()
+        .orElse(defaultValue);
   }
-
 }
